Added relic type filter. Added warning if main stat is the same as a substat. Collapsable instructions. Added substat detailed info.

--- a/scraping/hsr.ipynb
+++ b/scraping/hsr.ipynb
@@ -104,7 +104,12 @@
     "    relic_main_stats_dict = dict()\n",
     "    for relic in relic_stat_lists:\n",
     "        relic_main_stats_dict[relic[0]] = [get_proper_name(main_stat) for main_stat in relic[1:]]\n",
-    "    return relic_main_stats_dict"
+    "    return relic_main_stats_dict\n",
+    "\n",
+    "def remove_prefix(text, prefix):\n",
+    "    if text.startswith(prefix):\n",
+    "        return text[len(prefix):]\n",
+    "    return text"
    ]
   },
   {
@@ -118,6 +123,7 @@
     "characters_to_substats = dict()\n",
     "characters_to_urls = dict()\n",
     "characters_to_imgs = dict()\n",
+    "characters_to_substat_desc = dict()\n",
     "\n",
     "for character in characters_to_soups:\n",
     "\n",
@@ -137,6 +143,7 @@
     "    characters_to_main_stats[character_name] = process_relic_main_stats([main_stat_tag.find_all(string=True) for main_stat_tag in soup.select('div.main-stats')[0].select('div.box')])\n",
     "\n",
     "    best_relic_substats = soup.select('div.sub-stats')[0].text\n",
+    "    characters_to_substat_desc[character_name] = remove_prefix(best_relic_substats, 'Substats:')\n",
     "    characters_to_substats[character_name] = [substat for substat in all_possible_substats.difference(unwanted_flat_substats) if substat.lower() in best_relic_substats.lower()]\n",
     "\n",
     "    characters_to_urls[character_name] = f'/star-rail/characters/{character}'\n",
@@ -171,7 +178,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pd.DataFrame(flatten_dictionary_to_tuples(characters_to_relics), columns=['Character', 'Relic Set']).to_csv('characters_to_relics.csv', index=False)"
+    "(\n",
+    "    pd.DataFrame(flatten_dictionary_to_tuples(characters_to_relics), columns=['Character', 'Relic Set'])\n",
+    "    .sort_values(by=['Character', 'Relic Set'])\n",
+    "    .to_csv('characters_to_relics.csv', index=False)\n",
+    ")"
    ]
   },
   {
@@ -189,7 +200,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pd.DataFrame(flatten_dictionary_to_tuples(characters_to_substats), columns=['Character', 'Substat']).to_csv('characters_to_substats.csv', index=False)"
+    "(\n",
+    "    pd.DataFrame(flatten_dictionary_to_tuples(characters_to_substats), columns=['Character', 'Substat'])\n",
+    "    .sort_values(by=['Character', 'Substat'])\n",
+    "    .to_csv('characters_to_substats.csv', index=False)\n",
+    ")"
    ]
   },
   {
@@ -278,6 +293,15 @@
    "outputs": [],
    "source": [
     "pd.DataFrame(flatten_dictionary_to_tuples(relic_pieces_to_possible_main_stats), columns=['Relic Piece', 'Main Stat']).to_csv('piece_to_main_stat.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pd.DataFrame(flatten_dictionary_to_tuples(characters_to_substat_desc), columns=['Character', 'Substat INFO']).to_csv('characters_to_substat_desc.csv', index=False)"
    ]
   }
  ],
