Minor bug fixes:     Sets to pieces map     Reading substat description: accounting for typos

--- a/scraping/hsr.ipynb
+++ b/scraping/hsr.ipynb
@@ -94,22 +94,36 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_proper_name(name):\n",
-    "    # rename_dict = {}\n",
-    "    # name = rename_dict[name] if name in rename_dict else name\n",
-    "    name = difflib.get_close_matches(name, all_possible_main_stats, n=1, cutoff=0)[0]\n",
+    "def get_proper_name_of_main_stat(name: str):\n",
+    "    main_stat_candidates = {main_stat for main_stat in all_possible_main_stats if main_stat not in ['HP', 'ATK']}\n",
+    "    name = difflib.get_close_matches(name, main_stat_candidates, n=1, cutoff=0)[0]\n",
     "    return name\n",
     "\n",
     "def process_relic_main_stats(relic_stat_lists):\n",
     "    relic_main_stats_dict = dict()\n",
     "    for relic in relic_stat_lists:\n",
-    "        relic_main_stats_dict[relic[0]] = [get_proper_name(main_stat) for main_stat in relic[1:]]\n",
+    "        relic_main_stats_dict[relic[0]] = [get_proper_name_of_main_stat(main_stat) for main_stat in relic[1:]]\n",
     "    return relic_main_stats_dict\n",
     "\n",
-    "def remove_prefix(text, prefix):\n",
+    "def remove_prefix(text: str, prefix: str):\n",
     "    if text.startswith(prefix):\n",
     "        return text[len(prefix):]\n",
-    "    return text"
+    "    return text\n",
+    "\n",
+    "def check_if_substat_in_substat_desc(substat: str, substat_desc: str) -> bool:\n",
+    "    substat_desc = substat_desc.upper()\n",
+    "    alt_names = {\n",
+    "        'HP': 'HP%',\n",
+    "        'DEF': 'DEF%',\n",
+    "        'ATK': 'ATK%',\n",
+    "        'SPEED': 'SPD',\n",
+    "        'EFF RES': 'EFFECT RES',\n",
+    "        'EHR': 'EFFECT HIT RATE',\n",
+    "        'BREAK EFF': 'BREAK EFFECT'\n",
+    "    }\n",
+    "    for key, value in alt_names.items():\n",
+    "        substat_desc = substat_desc.replace(key, value)\n",
+    "    return substat.upper() in substat_desc"
    ]
   },
   {
@@ -144,7 +158,7 @@
     "\n",
     "    best_relic_substats = soup.select('div.sub-stats')[0].text\n",
     "    characters_to_substat_desc[character_name] = remove_prefix(best_relic_substats, 'Substats:')\n",
-    "    characters_to_substats[character_name] = [substat for substat in all_possible_substats.difference(unwanted_flat_substats) if substat.lower() in best_relic_substats.lower()]\n",
+    "    characters_to_substats[character_name] = [substat for substat in all_possible_substats.difference(unwanted_flat_substats) if check_if_substat_in_substat_desc(substat, best_relic_substats)]\n",
     "\n",
     "    characters_to_urls[character_name] = f'/star-rail/characters/{character}'\n",
     "    characters_to_imgs[character_name] = characters_to_tags[character].select('img')[2].get('src')"
