--- a/scraping/hsr.ipynb
+++ b/scraping/hsr.ipynb
@@ -195,7 +195,7 @@
     "(\n",
     "    pd.DataFrame(flatten_dictionary_to_tuples(characters_to_relics), columns=['Character', 'Relic Set'])\n",
     "    .sort_values(by=['Character', 'Relic Set'])\n",
-    "    .to_csv('characters_to_relics.csv', index=False)\n",
+    "    .to_csv('../characters_to_relics.csv', index=False)\n",
     ")"
    ]
   },
@@ -205,7 +205,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pd.DataFrame(flatten_dictionary_to_tuples(characters_to_main_stats), columns=['Character', 'Relic Piece', 'Main Stat']).to_csv('characters_to_main_stats.csv', index=False)"
+    "pd.DataFrame(flatten_dictionary_to_tuples(characters_to_main_stats), columns=['Character', 'Relic Piece', 'Main Stat']).to_csv('../tables/characters_to_main_stats.csv', index=False)"
    ]
   },
   {
@@ -217,7 +217,7 @@
     "(\n",
     "    pd.DataFrame(flatten_dictionary_to_tuples(characters_to_substats), columns=['Character', 'Substat'])\n",
     "    .sort_values(by=['Character', 'Substat'])\n",
-    "    .to_csv('characters_to_substats.csv', index=False)\n",
+    "    .to_csv('../tables/characters_to_substats.csv', index=False)\n",
     ")"
    ]
   },
@@ -227,7 +227,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pd.DataFrame(flatten_dictionary_to_tuples(characters_to_urls), columns=['Character', 'URL']).to_csv('characters_to_urls.csv', index=False)"
+    "pd.DataFrame(flatten_dictionary_to_tuples(characters_to_urls), columns=['Character', 'URL']).to_csv('../tables/characters_to_urls.csv', index=False)"
    ]
   },
   {
@@ -236,7 +236,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pd.DataFrame(flatten_dictionary_to_tuples(characters_to_imgs), columns=['Character', 'IMG']).to_csv('characters_to_imgs.csv', index=False)"
+    "pd.DataFrame(flatten_dictionary_to_tuples(characters_to_imgs), columns=['Character', 'IMG']).to_csv('../tables/characters_to_imgs.csv', index=False)"
    ]
   },
   {
@@ -288,7 +288,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pd.DataFrame(flatten_dictionary_to_tuples(relics_to_imgs), columns=['Relic Set', 'IMG']).to_csv('relics_to_imgs.csv', index=False)"
+    "pd.DataFrame(flatten_dictionary_to_tuples(relics_to_imgs), columns=['Relic Set', 'IMG']).to_csv('../tables/relics_to_imgs.csv', index=False)"
    ]
   },
   {
@@ -297,7 +297,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pd.DataFrame(flatten_dictionary_to_tuples(relics_to_desc), columns=['Relic Set', 'DESCRIPTION']).to_csv('relics_to_desc.csv', index=False)"
+    "pd.DataFrame(flatten_dictionary_to_tuples(relics_to_desc), columns=['Relic Set', 'DESCRIPTION']).to_csv('../tables/relics_to_desc.csv', index=False)"
    ]
   },
   {
@@ -306,7 +306,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pd.DataFrame(flatten_dictionary_to_tuples(relic_pieces_to_possible_main_stats), columns=['Relic Piece', 'Main Stat']).to_csv('piece_to_main_stat.csv', index=False)"
+    "pd.DataFrame(flatten_dictionary_to_tuples(relic_pieces_to_possible_main_stats), columns=['Relic Piece', 'Main Stat']).to_csv('../tables/piece_to_main_stat.csv', index=False)"
    ]
   },
   {
@@ -315,8 +315,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pd.DataFrame(flatten_dictionary_to_tuples(characters_to_substat_desc), columns=['Character', 'Substat INFO']).to_csv('characters_to_substat_desc.csv', index=False)"
+    "pd.DataFrame(flatten_dictionary_to_tuples(characters_to_substat_desc), columns=['Character', 'Substat INFO']).to_csv('../tables/characters_to_substat_desc.csv', index=False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
