--- a/scraping/hsr.ipynb
+++ b/scraping/hsr.ipynb
@@ -195,7 +195,7 @@
     "(\n",
     "    pd.DataFrame(flatten_dictionary_to_tuples(characters_to_relics), columns=['Character', 'Relic Set'])\n",
     "    .sort_values(by=['Character', 'Relic Set'])\n",
-    "    .to_csv('../characters_to_relics.csv', index=False)\n",
+    "    .to_csv('../tables/characters_to_relics.csv', index=False)\n",
     ")"
    ]
   },
