--- a/scraping/hsr.ipynb
+++ b/scraping/hsr.ipynb
@@ -95,6 +95,8 @@
    "outputs": [],
    "source": [
     "def get_proper_name_of_main_stat(name: str):\n",
+    "    if name.lower() == 'anything':\n",
+    "        return 'Anything'\n",
     "    main_stat_candidates = {main_stat for main_stat in all_possible_main_stats if main_stat not in ['HP', 'ATK']}\n",
     "    name = difflib.get_close_matches(name, main_stat_candidates, n=1, cutoff=0)[0]\n",
     "    return name\n",
@@ -145,7 +147,7 @@
     "    for script in soup([\"script\", \"style\"]):\n",
     "        script.decompose()\n",
     "\n",
-    "    if 'They will be added when the character is released' in soup.get_text():\n",
+    "    if \"build information aren't available yet. They will be added when the character is released.\" in soup.get_text():\n",
     "        continue\n",
     "\n",
     "    character_name = soup.select('div.character-top strong')[0].get_text()\n",
