--- a/scraping/hsr.ipynb
+++ b/scraping/hsr.ipynb
@@ -12,7 +12,9 @@
     "import time\n",
     "from itertools import chain\n",
     "import difflib\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "from collections import defaultdict\n",
+    "from typing import List, Dict"
    ]
   },
   {
@@ -125,7 +127,16 @@
     "    }\n",
     "    for key, value in alt_names.items():\n",
     "        substat_desc = substat_desc.replace(key, value)\n",
-    "    return substat.upper() in substat_desc"
+    "    return substat.upper() in substat_desc\n",
+    "\n",
+    "def merge_dictionaries(dicts: List[Dict[str, List]]) -> Dict[str, List]:\n",
+    "    merged_dict = defaultdict(set)\n",
+    "    \n",
+    "    for d in dicts:\n",
+    "        for key, value in d.items():\n",
+    "            merged_dict[key].update(value)\n",
+    "    \n",
+    "    return {key: sorted(values) for key, values in merged_dict.items()}"
    ]
   },
   {
@@ -156,10 +167,18 @@
     "    all_relics.discard('')\n",
     "    characters_to_relics[character_name] = all_relics\n",
     "\n",
-    "    characters_to_main_stats[character_name] = process_relic_main_stats([main_stat_tag.find_all(string=True) for main_stat_tag in soup.select('div.main-stats')[0].select('div.box')])\n",
+    "    main_stat_dicts = []\n",
+    "    for main_stat_info in soup.select('div.main-stats'):\n",
+    "        main_stat_dicts.append(process_relic_main_stats([main_stat_tag.find_all(string=True) for main_stat_tag in main_stat_info.select('div.box')]))\n",
+    "    characters_to_main_stats[character_name] = merge_dictionaries(main_stat_dicts)\n",
     "\n",
-    "    best_relic_substats = soup.select('div.sub-stats')[0].text\n",
-    "    characters_to_substat_desc[character_name] = remove_prefix(best_relic_substats, 'Substats:')\n",
+    "    best_relic_substats = '\\n'.join(\n",
+    "        [remove_prefix(o.text, 'Substats:')\n",
+    "         for o in soup.select('div.tab-inside')[2].select('div.build-stats div.sub-stats')\n",
+    "         if o.text.lower().startswith('substats:')\n",
+    "        ]\n",
+    "    )\n",
+    "    characters_to_substat_desc[character_name] = best_relic_substats\n",
     "    characters_to_substats[character_name] = [substat for substat in all_possible_substats.difference(unwanted_flat_substats) if check_if_substat_in_substat_desc(substat, best_relic_substats)]\n",
     "\n",
     "    characters_to_urls[character_name] = f'/star-rail/characters/{character}'\n",
@@ -249,23 +268,6 @@
    "source": [
     "relics_url = 'https://www.prydwen.gg/star-rail/guides/relic-sets'\n",
     "relic_soup = BeautifulSoup(requests.get(relics_url).text, 'html.parser')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# def extract_text_from_tag(tag):\n",
-    "#     text_contents = ''\n",
-    "#     for element in tag.descendants:\n",
-    "#         if element.name in ['br'] or isinstance(element, str):\n",
-    "#             text = element if isinstance(element, str) else '\\n'\n",
-    "#             text_contents += text.strip() + ('' if text.strip() == '' else '\\n')\n",
-    "#         elif element.name in ['p', 'div', 'h1', 'h2', 'h3', 'h4', 'h5', 'h6', 'li']:\n",
-    "#             text_contents += '\\n' + element.get_text(strip=True, separator=' ') + '\\n'\n",
-    "#     return text_contents.strip()"
    ]
   },
   {
